<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
	<string name="app_name" translatable="false">Brainf</string>
	<!-- Strings for menu_main.xml -->
	<string name="action_new_file">New File</string>
	<string name="action_open">Open</string>
	<string name="action_save">Save</string>
	<string name="action_save_as">Save As</string>
	<string name="action_about">About</string>
	<!-- Strings for about + settings activities  -->
	<string name="title_activity_about">Brainf - About</string>
	<!-- settings  -->
	<!-- about  -->
	<!-- Info -->
	<string name="info_heading">Info</string>
	<string name="info_text">"Interpreter for the ‘Brainf’ programming language.</string>
	<!-- Features -->
	<string name="features_heading">Features</string>
<string name="features_text">"- **Integration with System Theme**: Brainf seamlessly integrates with the system's theme, ensuring that the app's appearance aligns with the user's device-wide design choices.

- **Effortless Code Management**: Easily create, edit, save, and execute Brainf code and text files, providing a comprehensive platform for coding endeavours.

- **Vibrant Syntax Highlighting**: Harness the power of regex-based syntax highlighting, making your code structures and elements vividly distinct for enhanced readability and comprehension.

- **Swift Navigation via Launcher Shortcuts**: Instantly access key sections like Settings, About, and New File through convenient launcher shortcuts, streamlining your interaction with the app for maximum efficiency.</string>
	<!-- License -->
	<string name="license_heading">MIT License</string>
	<string name="license_text">"Copyright © FredHappyface</string>
	<!-- Links -->
	<string name="links_heading">Links</string>
	<string name="links_text">"- The source code for Brainf is available at https://github.com/FredHappyface/Android.Brainf

- MIT License
(See the license for more information https://github.com/FredHappyface/Android.Brainf/blob/main/LICENSE.md )</string>
	<string name="version_heading">Version Info</string>
	<string name="version_text" translatable="false">[debug]</string>
	<!-- Saved dialog  -->
	<string name="dialog_saved_button">OK</string>
	<string name="dialog_saved_title">Saved!</string>
	<!-- New file dialog  -->
	<string name="dialog_new_confirm">Yes</string>
	<string name="dialog_new_cancel">No</string>
	<string name="dialog_new_title">Create New File?</string>
	<!-- Blank file text  -->
	<string name="blank_file_text">[This is a blank file, open a file or edit this file and save]</string>
	<!-- Run, stdin, stdout  -->
	<string name="main_run_btn">Run Program</string>
	<string name="main_stdin">[Write Input Text Here]</string>
	<string name="main_stdout">[Output Text Displayed Here]</string>
	<string name="main_stdin_header">Input Text</string>
	<string name="main_stdout_header">Output Text</string>
	<string name="main_debug">[Debug Info]</string>
	<string name="main_data">Data Array</string>
	<string name="main_input">Input as Bytes</string>
	<string name="main_output">Output as Bytes</string>
	<!-- Strings for shortcuts.xml -->
	<string name="shortcut_disabled">Shortcut Disabled</string>
</resources>
