<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:theme="@style/AppTheme">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<LinearLayout
			style="@style/widthMatchHeightWrap"
			android:orientation="vertical"
			android:paddingTop="@dimen/content_margin_top"
			android:paddingBottom="@dimen/content_margin_top">

			<!-- User Input -->
			<EditText
				android:id="@+id/codeHighlight"
				style="@style/code_text"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:ems="10"
				android:gravity="top|start"
				android:importantForAutofill="no"
				android:inputType=""
				android:text=""
				android:textColor="@color/fg"
				tools:ignore="LabelFor" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/body_text"
				android:text="@string/main_stdin_header"
				/>

			<EditText
				android:id="@+id/stdin"
				style="@style/code_text"
				android:hint="@string/main_stdin"
				android:importantForAutofill="no"
				android:inputType="textMultiLine"
				/>

			<Button
				style="@style/button"
				android:onClick="run"
				android:text="@string/main_run_btn"
				app:shapeAppearance="?attr/shapeAppearanceSmallComponent" />

			<!-- Program Pretty Output -->
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/body_text"
				android:text="@string/main_stdout_header"
				/>

			<TextView
				android:id="@+id/stdout"
				style="@style/code_text"
				android:text="@string/main_stdout" />

			<!-- Debug -->
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/heading"
				android:text="@string/main_debug"
				/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/body_text"
				android:text="@string/main_input"
				/>

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/inputView"
				android:layout_width="match_parent"
				android:layout_height="match_parent" />


			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/body_text"
				android:text="@string/main_output"
				/>

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/outputView"
				android:layout_width="match_parent"
				android:layout_height="match_parent" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/body_text"
				android:text="@string/main_data"
				/>

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/dataView"
				android:layout_width="match_parent"
				android:layout_height="match_parent" />


		</LinearLayout>
	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
